# dp-splat-uav

./: .gitignore  CITATION.cff  LICENSE  PHASE_A_NOTES.md  README.md  conftest.py  pyproject.toml  requirements-lock.txt
experiments/: change_detection.py  eval_heldout.py  fig_khat_map.py  fig_khat_vs_complexity.py  geometric_accuracy.py  make_paper_figs.py  mill19_anchor.py  reflight.py  run_tiled_fit.py  sparsification.py  stpls3d_khat_grid.py
figures/: README.md
paper/: OUTLINE.md  references.bib
paper/sections/: conclusion.tex  discussion.tex  intro.tex  results.tex
paper/submission/: cover_letter.tex  submission_checklist.md
paper/submission/dong_tgrs_latex_bundle/: main.tex
paper/submission/dong_tgrs_latex_bundle/sections/: method.tex  related.tex  setup.tex
src/dp_splat_uav/: __init__.py  baselines.py  io_aerial.py  merge.py  stitch.py  tiling.py  weighted.py
tests/: conftest.py  test_change_oracle.py  test_eval_mass_oracle.py  test_geoacc_oracle.py  test_io_baselines.py  test_merge_oracle.py  test_merge_units.py  test_reflight_units.py  test_sparsification_oracle.py  test_stitch_oracle.py  test_tiling.py  test_weighted_oracle.py
